--- a/biblio.bib
+++ b/biblio.bib
@@ -37,7 +37,6 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Year = {1998}}
 
 
-
 @inproceedings{smith04,
 	Author = {Smith, D.},
 	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
@@ -66,13 +65,31 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Year = {2009}}
 
 
+@inproceedings{edelkamp2006compilation,
+  title={On the Compilation of Plan Constraints and Preferences.},
+  author={Edelkamp, Stefan},
+  booktitle={In Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling (ICAPS)},
+  pages={374--377},
+  year={2006}
+}
+
+
+@inproceedings{edelkamp2006large,
+  title={Large-scale optimal {PDDL3} planning with {MIPS-XXL}},
+  author={Edelkamp, Stefan and Jabbar, Shahid and Naizih, M},
+  journal={In Eighth International Planning Competition Booklet {(IPC 2006))}},
+  pages={28--30},
+  year={2006}
+}
+
+
 @inproceedings{BM:AAAI06,
-        title = {Planning with First-Order Temporally Extended Goals using Heuristic Search},
-        pages = {788--795},
-        booktitle = {Proceedings of the AAAI Twenty-First National Conference on Artificial Intelligence},
-        publisher = {{AAAI} Press},
-        author = {J. Baier and S. {McIlraith}},
-        year = {2006}
+    title = {Planning with First-Order Temporally Extended Goals using Heuristic Search},
+    pages = {788--795},
+    booktitle = {Proceedings of the AAAI Twenty-First National Conference on Artificial Intelligence},
+    publisher = {{AAAI} Press},
+    author = {J. Baier and S. {McIlraith}},
+    year = {2006}
 }
 
 
@@ -126,7 +143,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In Eighth International Planning Competition Booklet {(ICAPS)}},
+	Booktitle = {In Eighth International Planning Competition Booklet {(IPC 2014)}},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
 	pages ={43-47}}
@@ -135,7 +152,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS)},
+      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
       pages={13--16},
       year={2014}
 }
@@ -143,7 +160,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 @inproceedings{cenamor2014ibacop,
       title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS)},
+      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
       pages={35--38},
       year={2014}
 }
@@ -159,7 +176,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 }
 
 @misc{ipc9website,
-  title = {The 2018 international planning competition ({IPC}) Classical Tracks},
+  title = {The 2018 international planning competition ({IPC 2018}) Classical Tracks},
   howpublished = {\url{https://ipc2018-classical.bitbucket.io}},
   note = {Accessed: 2018-10-12}
 }
