--- a/biblio.bib
+++ b/biblio.bib
@@ -67,7 +67,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 
 @inproceedings{edelkamp2006compilation,
   title={On the Compilation of Plan Constraints and Preferences.},
-  author={Edelkamp, Stefan},
+  author={Edelkamp, S.},
   booktitle={In Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling (ICAPS)},
   pages={374--377},
   year={2006}
@@ -76,10 +76,20 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 
 @inproceedings{edelkamp2006large,
   title={Large-scale optimal {PDDL3} planning with {MIPS-XXL}},
-  author={Edelkamp, Stefan and Jabbar, Shahid and Naizih, M},
+  author={Edelkamp, S. and Jabbar, S. and Naizih, M.},
   journal={In Eighth International Planning Competition Booklet {(IPC 2006))}},
   pages={28--30},
   year={2006}
+}
+
+
+author={Coles, Amanda Jane and Coles, Andrew},
+@inproceedings{coles2013searching,
+  title={Searching for Good Solutions in Goal-Dense Search Spaces.},
+  Author = {Coles, A.~J. and Coles, A.},
+  booktitle={Proceedings of the Twenty-Third International Conference on Automated Planning and Scheduling (ICAPS)},
+  year={2013},
+  pages={37--45}
 }
 
 
@@ -121,10 +131,10 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 
 
 @inproceedings{nebel2018,
-	Author = {Wright B., Mattmüller R. and Nebel B..},
+	Author = {Wright B., Mattmüller R. and Nebel B.},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
 	Year = {2018},
-	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)}
+	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)},
 	pages={474-482}
 	}
 
