--- a/biblio.bib
+++ b/biblio.bib
@@ -1,29 +1,30 @@
 Booktitle = {Proceedings of Nineteenth National AAAI Conference on Artificial Intelligence},
 Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligence},
 
+Optpublisher = {AAAI Press},
 @inproceedings{Briel-et-al:AAAI04,
-	Author = {Briel, M. and Sanchez, R. and Do, M. and Kambhampati, S.},
+	Author = {Briel, M. and Sanchez, R. and Do, M.B. and Kambhampati, S.},
 	Booktitle = {Proceedings of the AAAI Nineteenth National Conference on Artificial Intelligence},
-	Optpublisher = {AAAI Press},
 	Title = {Effective Approaches for Partial Satisfaction (Over-Subscription) Planning},
 	Year = {2004},
-    pages={562--569}
-    }
+  pages={562--569}
+}
 
 
 @inproceedings{do-kambhampati04,
 	Author = {Do, M.B. and Kambhampati, S.},
-	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS)}},
+	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS 2004)}},
 	Title = {Partial Satisfaction (Over-Subscription) Planning as Heuristic Search},
 	Year = 2004,
-	pages={mancanti}}
+	}
+	pages={mancanti} # non le trovo
 
 
 @inproceedings{Weld:94AA,
 	Address = {Seattle, WA},
 	Author = {Weld, D. and Etzioni, O.},
-	Booktitle = {In Proceedings of the AAAI Twelfth National Conference on Artificial Intelligence},
-	Pages = {1042-1047},
+	Booktitle = {Proceedings of the AAAI Twelfth National Conference on Artificial Intelligence},
+	Pages = {1042--1047},
 	Title = {The First Law of Robotics (A Call to Arms)},
 	Year = 1994}
 
@@ -36,11 +37,30 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Volume = {22(1-2)},
 	Year = {1998}}
 
+booktitle={Proceedings of the Sixteenth European Conference on Artificial Intelligence (ECAI-04},
+@inproceedings{CC:ECAI04,
+  title={Compilation of {LTL} goal formulas into {PDDL}},
+  author={Cresswell, S. and Coddington, A.},
+  booktitle={Proceedings of the Sixteenth European Conference on Artificial Intelligence (ECAI 2004)},
+  volume={16},
+  pages={985--986},
+  year=2004
+}
+
+Proc. of the 14th European Conference on Artificial Intelligence (ECAI-00)
+@inproceedings{Rintanen:ECAI00,
+  title={Incorporation of temporal logic control into plan operators},
+  author={Rintanen, J.},
+  booktitle={Proceedings of the Fourteenth European Conference on Artificial Intelligence (ECAI 2000)},
+  pages={526--530},
+  year={2000},
+}
+
 
 @inproceedings{smith04,
 	Author = {Smith, D.},
-	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
-	Optpages = {393--401},
+	Booktitle = {Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS 2004)}},
+	pages = {393--401},
 	Title = {Choosing Objectives in Over-Subscription Planning},
 	Year = 2004}
 
@@ -52,98 +72,135 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Pages = {619--668},
 	Title = {Deterministic Planning in the Fifth International Planning Competition: {PDDL3} and Experimental Evaluation of the Planners},
 	Volume = {173},
-	Year = {2009}}
+	Year = 2009
+  }
 
 
 @article{Hplanp:aij09,
 	Author = {Baier, J. and Bacchus, F. and McIlraith, S.},
-	Date-Modified = {2015-03-05 18:29:40 +0000},
 	Journal = {Artificial Intelligence},
 	Pages = {593--618},
 	Title = {A Heuristic Search Approach to Planning with Temporally Extended Preferecens},
 	Volume = {173},
-	Year = {2009}}
+	Year = 2009}
 
 
 @inproceedings{edelkamp2006compilation,
   title={On the Compilation of Plan Constraints and Preferences.},
   author={Edelkamp, S.},
-  booktitle={In Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling (ICAPS)},
+  booktitle={Proceedings of the Sixteenth International Conference on Automated Planning and Scheduling {(ICAPS 2006)}},
   pages={374--377},
-  year={2006}
+  year=2006
 }
 
 
 @inproceedings{edelkamp2006large,
-  title={Large-scale optimal {PDDL3} planning with {MIPS-XXL}},
+  title={Large-scale optimal {PDDL3} planning with {MIPS-XXL}.},
   author={Edelkamp, S. and Jabbar, S. and Naizih, M.},
-  journal={In Eighth International Planning Competition Booklet {(IPC 2006))}},
+  booktitle={Eighth International Planning Competition Booklet {(IPC 2006))}},
   pages={28--30},
-  year={2006}
+  year=2006
 }
 
+Booktitle = {Recent Advances in AI Planning: 4th European Conference on Planning, ECP'97},
+
+@inproceedings{gazen1997combining,
+  title={Combining the expressivity of {UCPOP} with the efficiency of {G}raphplan},
+  author={Gazen, B.C. and Knoblock, C.A.},
+  booktitle={Proceedings of the 4th European Conference on Planning (ECP 1997)},
+  pages={221--233},
+  year={1997},
+}
 
 author={Coles, Amanda Jane and Coles, Andrew},
 @inproceedings{coles2013searching,
   title={Searching for Good Solutions in Goal-Dense Search Spaces.},
   Author = {Coles, A.~J. and Coles, A.},
-  booktitle={Proceedings of the Twenty-Third International Conference on Automated Planning and Scheduling (ICAPS)},
-  year={2013},
+  booktitle={Proceedings of the Twenty-Third International Conference on Automated Planning and Scheduling (ICAPS 2013)},
+  year=2013,
   pages={37--45}
 }
 
-
+publisher = {{AAAI} Press},
 @inproceedings{BM:AAAI06,
     title = {Planning with First-Order Temporally Extended Goals using Heuristic Search},
     pages = {788--795},
     booktitle = {Proceedings of the AAAI Twenty-First National Conference on Artificial Intelligence},
-    publisher = {{AAAI} Press},
     author = {J. Baier and S. {McIlraith}},
     year = {2006}
 }
 
 
 @article{kn:geffner09,
-	Author = {Emil Keyder and Hector Geffner},
+	Author = {Keyder E. and and Geffner, H.},
 	Journal = {Journal of Artificial Intelligence Research (JAIR)},
-	Pages = {547-556},
+	Pages = {547--556},
 	Title = {Soft Goals Can Be Compiled Away},
 	Volume = {36},
 	Year = {2009}}
 
-
 @inproceedings{percassi2017improving,
       title={Improving Plan Quality through Heuristics for Guiding and Pruning the Search: A Study Using {LAMA}},
       author={Percassi, F. and Gerevini, A. and Geffner, H.},
-      year={2017},
-      booktitle={Proceedings of the Tenth International Symposium on Combinatorial Search (SoCS)},
+      year=2017,
+      booktitle={Proceedings of the Tenth International Symposium on Combinatorial Search (SoCS 2017)},
       Pages={144--148}
+}
+
+@inproceedings{de2014reasoning,
+  title={Reasoning on {LTL} on Finite Traces: Insensitivity to Infiniteness.},
+  author={De Giacomo, G. and De Masellis, R. and Montali, M.},
+  booktitle={Proceedings of the Twenty-Eighth AAAI Conference on Artificial Intelligence},
+  pages={1027--1033},
+  year={2014}
+}
+
+
+@inproceedings{fdremix,
+  title={Fast Downward Remix},
+  author={Seipp, Jendrik},
+  booktitle={Ninth International Planning Competition Booklet {(IPC 2018)}},
+  pages = {67--69},
+  year=2018
+}
+
+
+Fast Downward Stone Soup 2018 (planner abstract).
+In Ninth International Planning Competition (IPC 2018), Deterministic Part, pp. 72-74. 2018. 
+
+@inproceedings{fdss2018,
+  title={Fast Downward Stone Soup 2018},
+  author={Seipp, Jendrik},
+  booktitle={Ninth International Planning Competition Booklet {(IPC 2018)}},
+  pages = {72--74},
+  year=2018
 }
 
 
 @inproceedings{coles2011lprpg,
-  title={LPRPG-P: Relaxed Plan Heuristics for Planning with Preferences.},
-  author={Coles, Amanda Jane and Coles, Andrew},
-  booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS)},
+  title={{LPRPG-P}: Relaxed Plan Heuristics for Planning with Preferences.},
+  author={Coles, A.~J. and Coles, A.},
+  booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS 2011)},
   year={2011},
-  pages={26-33}
+  pages={26--33}
 }
 
 
 @inproceedings{nebel2018,
-	Author = {Wright B., Mattmüller R. and Nebel B.},
+	Author = {Wright B. and Mattm\"{u}ller R. and Nebel B.},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
 	Year = {2018},
-	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)},
-	pages={474-482}
-	}
+	booktitle={Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR 2018)},
+	pages={474--482}
+}
 
-	
+
+
 @article{RicLAMA,
 	Author = {Richter, S. and Westphal, M.},
 	Journal = {Journal of Artificial Intelligence Research},
 	Number = {1},
-	Numpages = {51},
+  pages={127--177},
 	Publisher = {AI Access Foundation},
 	Title = {The {LAMA} Planner: Guiding Cost-based Anytime Planning with Landmarks},
 	Volume = {39},
@@ -153,26 +210,36 @@ author={Coles, Amanda Jane and Coles, Andrew},
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In Eighth International Planning Competition Booklet {(IPC 2014)}},
+	Booktitle = {Eighth International Planning Competition Booklet {(IPC 2014)}},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
-	pages ={43-47}}
+	pages ={43--47}}
 	
 
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
+      Booktitle = {Eighth International Planning Competition Booklet (IPC 2014)},
       pages={13--16},
       year={2014}
 }
 
 @inproceedings{cenamor2014ibacop,
-      title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
+      title={{IB}A{C}O{P} and {IB}A{C}O{P}2 planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In Eighth International Planning Competition Booklet (IPC 2014)},
+      Booktitle = {Eighth International Planning Competition Booklet (IPC 2014)},
       pages={35--38},
       year={2014}
+}
+
+@article{bonet2001planning,
+  title={Planning as heuristic search},
+  author={Bonet, B. and Geffner, H.},
+  journal={Artificial Intelligence},
+  volume={129},
+  number={1-2},
+  pages={5--33},
+  year={2001},
 }
 
 @article{vallati20152014,
@@ -191,11 +258,31 @@ author={Coles, Amanda Jane and Coles, Andrew},
   note = {Accessed: 2018-10-12}
 }
 
+@inproceedings{ceriani2015planning,
+  title={Planning with always preferences by compilation into strips with action costs},
+  author={Ceriani, L. and Gerevini, A.},
+  booktitle={Proceedings of the Eighth International Symposium on Combinatorial Search (SoCS 2015)},
+  year={2015},
+  pages = {161--165},
+}
+
+@article{nebel2000compilability,
+  title={On the compilability and expressive power of propositional planning formalisms},
+  author={Nebel, Bernhard},
+  journal={Journal of Artificial Intelligence Research (JAIR)},
+  volume={12},
+  pages={271--315},
+  year={2000}
+}
 
 @inproceedings{haslum2007domain,
   title={Domain-independent construction of pattern database heuristics for cost-optimal planning},
   author={Haslum, P. and Botea, A. and Helmert, M. and Bonet, B. and Koenig, S. and others},
-  year={2007},
-  Booktitle={In Proceedings of the AAAI Twenty-second Conference on Artificial Intelligence, 
-  pages={1007–1012}
+  booktitle={Proceedings of the AAAI Twenty-second Conference on Artificial Intelligence}, 
+  pages={1007--1012},
+  year=2007,
+
 }
+
+
+
